# F1-MQTT-LVGL-Intelligent-House

./: .mxproject  F1 FSMC LVGL.ioc  F103ZET6+FreeRTOS+LVGL+MQTT的简易智能家居系统.md  LICENSE  README-Plus.md  README.md
AT24Cxx/: 24cxx.c  24cxx.h
BSP/AT24Cxx/: 24cxx.c  24cxx.h
BSP/DTH11/: Dth11.c  Dth11.h
BSP/LCD/: GUI.c  GUI.h  Lcd.h  pic.h
BSP/LightSensor/: Lightsensor.c  Lightsensor.h
BSP/MQ2/: MQ2.c  MQ2.h
BSP/TOUCH/: touch.c  touch.h
BSP/WIFI/: ATcommand.c  ATcommand.h  WIFI_Uart_IRQ.c  WIFI_Uart_IRQ.h
Core/Inc/: FreeRTOSConfig.h  main.h  rtc.h  stm32f1xx_hal_conf.h  stm32f1xx_it.h  tim.h
Core/Src/: adc.c  freertos.c  fsmc.c  gpio.c  (+7 more)
LCD/: FONT.H  GUI.c  GUI.h  Lcd.c
LCD_TEST/: test.c  test.h
LVGL/: lv_conf.h
LVGL/APP/UI_demo/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_events.c  ui_events.h  ui_helpers.c
LVGL/APP/UI_demo/images/: ui_img_bg1_png.c  ui_img_bg4_png.c  ui_img_btn_play_act_png.c  ui_img_btn_play_inact_png.c  ui_img_iu_png.c  ui_img_time_png.c  ui_img_weather_1_png.c
LVGL/APP/UI_demo/screens/: ui_Message.c
LightSensor/: Lightsensor.h
MDK-ARM/: F1 FSMC LVGL.uvguix.Praymerry  F1 FSMC LVGL.uvoptx  F1 FSMC LVGL.uvprojx  startup_stm32f103xe.lst  startup_stm32f103xe.s
MainTask/: MQTT_Task.c  MQTT_Task.h
RingBuffer/: ring_buffer.h
SYSTEM/: Delay.h  Uart_Redefine.h  myiic.c  sys.c
TOUCH/: touch.c
UserTask/: IH_ATcommand.c  IH_ATcommand.h  IH_DataManage.c  IH_DataManage.h  IH_Hardware_Init.c  IH_Hardware_Init.h  IH_LvglHandler.c  IH_LvglHandler.h  IH_MqttTask.c  IH_MqttTask.h  IH_Task_Init.c  IH_Task_Init.h
WIFI/: ATcommand.c
(+661 files in other folders)
